--- a/RiskofRain2Database/src/main/java/jodicelukeendicott/riskofrain2database/EnemySelectionWin.form
+++ b/RiskofRain2Database/src/main/java/jodicelukeendicott/riskofrain2database/EnemySelectionWin.form
@@ -110,21 +110,16 @@
                       <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
                   </Group>
               </Group>
+              <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jLabel1" min="-2" pref="203" max="-2" attributes="0"/>
-                  <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jbtntglAll" alignment="1" min="-2" pref="188" max="-2" attributes="0"/>
-                          <Group type="103" alignment="1" groupAlignment="0" attributes="0">
-                              <Component id="jbtntglBoss" min="-2" pref="188" max="-2" attributes="0"/>
-                              <Component id="jbtntglSBoss" min="-2" pref="188" max="-2" attributes="0"/>
-                              <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="jbtntglMd" pref="188" max="32767" attributes="0"/>
-                                  <Component id="jbtntglSm" max="32767" attributes="0"/>
-                                  <Component id="jbtntglLg" alignment="0" max="32767" attributes="0"/>
-                              </Group>
-                          </Group>
+                  <Component id="jbtntglAll" alignment="1" min="-2" pref="188" max="-2" attributes="0"/>
+                  <Group type="103" alignment="1" groupAlignment="0" attributes="0">
+                      <Component id="jbtntglBoss" min="-2" pref="188" max="-2" attributes="0"/>
+                      <Component id="jbtntglSBoss" min="-2" pref="188" max="-2" attributes="0"/>
+                      <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="jbtntglMd" pref="188" max="32767" attributes="0"/>
+                          <Component id="jbtntglSm" max="32767" attributes="0"/>
+                          <Component id="jbtntglLg" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -149,8 +144,6 @@
                       <Component id="jbtntglSBoss" min="-2" pref="50" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jbtntglBoss" min="-2" pref="50" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="jLabel1" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Component id="jScrollPane1" min="-2" pref="361" max="-2" attributes="0"/>
@@ -159,10 +152,9 @@
                           <Component id="btngetMonsInfo" alignment="3" min="-2" pref="55" max="-2" attributes="0"/>
                           <Component id="btnBacktoMenu" alignment="3" min="-2" pref="55" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="0" pref="44" max="32767" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace pref="55" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -197,15 +189,6 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBacktoMenuActionPerformed"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JLabel" name="jLabel1">
-      <Properties>
-        <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-          <Border info="org.netbeans.modules.form.compat2.border.BevelBorderInfo">
-            <BevelBorder/>
-          </Border>
-        </Property>
-      </Properties>
     </Component>
     <Component class="javax.swing.JToggleButton" name="jbtntglAll">
       <Properties>
