--- a/RiskofRain2Database/src/main/java/jodicelukeendicott/riskofrain2database/SurvivorSelectionWin.form
+++ b/RiskofRain2Database/src/main/java/jodicelukeendicott/riskofrain2database/SurvivorSelectionWin.form
@@ -150,7 +150,7 @@
             <EventHandler event="valueChanged" listener="javax.swing.event.ListSelectionListener" parameters="javax.swing.event.ListSelectionEvent" handler="jList1ValueChanged"/>
           </Events>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Survivor&gt;"/>
           </AuxValues>
         </Component>
       </SubComponents>
